--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,6 @@ on: [push, pull_request]
 
 jobs:
   build:
-    strategy:
-      matrix:
-        arch: ["x86", "x64"]
     runs-on: windows-latest
     steps:
       - name: Checkout
@@ -14,6 +11,11 @@ jobs:
 
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v1.0.2
+        
+      - name: restore nuget
+        uses: warrenbuckley/Setup-Nuget@v1
+        
+      - run: nuget restore IVSwitcher/IVSwitcher.csproj
 
       - name: Run MSBuild
         run: msbuild /p:Configuration=Release
