--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,5 +23,5 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v2
         with:
-          name: IVSwitcher_GitHub_actions_artifacts_win-${{matrix.arch}}
+          name: IVSwitcher_GitHub_actions_artifacts
           path: IVSwitcher\bin\Release
